--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -43,43 +43,45 @@
 
 	<div class="row justify-content-center">
 	 <div class="contactomain col-lg-8 col-sm-10 justify-content-center">
-		<div class="contacto__titulo text-center">
+		<div class="contacto__titulo text-center m-5">
 			<h1>Contactanos</h1>
 		</div>
 
-		<div class="contacto__formulario">
+		<div class="contacto__formulario m-3">
 			<form class="contacto__form text-center">
-				<div class="contacto__formimg">
+				<div class="contacto__formimg m-3">
 					<img class="animate__animated animate__fadeIn" src="..//imagenes/joculog.png" width="200px">
 				</div>
-				<div class="mb-3">
+				<div>
+				<div class="mb-2">
 				  <label for="exampleFormControlInput1" class="form-label">Email</label>
 				  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
 				</div>
-				<div class="mb-3">
+				<div class="mb-2">
 				  <label for="exampleFormControlTextarea1" class="form-label">Numero</label>
 				  <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
 				</div>
-				<div class="mb-3">
+				<div class="mb-2">
 				  <label for="exampleFormControlTextarea1" class="form-label">Asunto</label>
 				  <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
 				</div>
-				<div class="mb-3">
+				<div class="mb-2">
 				  <label for="exampleFormControlTextarea1" class="form-label">Consulta</label>
 				  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 				</div>
 				<button type="submit" class="btn btn-dark">Submit</button>
+				</div>
 			</form>
 		</div>
 	</div>
 
-	<div class="row justify-content-center">
+	<div class="row justify-content-center m-5">
 		<div class="contacto__ubicacion col-8">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1642.4481914562027!2d-58.41638104184627!3d-34.5814882951163!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb578cfe06087%3A0x77fe81d1d5469542!2sAv.%20Gral.%20Las%20Heras%203999%2C%20C1425%20ATD%2C%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1645647076002!5m2!1ses!2sar" width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 		</div>
 	</div>
 
-	<div class="row justify-content-center">
+	<div class="row justify-content-center m-5">
 		<div class="direcciones col-6 text-center">
 			<div  class="contacto__direccion">
 				<h3>Dirección Av. Las Heras 3999</h3>
