--- a/paginas/portfolio.html
+++ b/paginas/portfolio.html
@@ -40,168 +40,180 @@
 	    </div>  
 
 	<div class="row justify-content-center text-center">
-	 <div class="portfoliomain col-lg-8 col-sm-10">
-		<div class="portfolio__titulo">
+	 <div class="portfoliomain col-lg-8 col-sm-8 col-8">
+		<div class="portfolio__titulo m-5">
 			<h1>Portfolio</h1>
 		</div>
 
-		<div class="portfolio__texto">
-			<p>Hace click y descubri todos los proyectos que ya realizamos.</p>
-		</div>
-
-		<div class="portfolio__navstand">
-			<div class="portfolio__nombre">
+	<div class="row">
+		<div class="portfolio__navstand m-3">
+			<div class="portfolio__nombre m-3">
 				<h2>Diseño de Stands</h2>
 			</div>
-			<div class="portfolio__info">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur.</p>
+			<div class="row">
+				<div class="portfolio__info col-lg-4 m-auto">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur.</p>
+				</div>
+				<div id="carouselExampleIndicators" class="carousel slide col-lg-7 ms-auto" data-bs-ride="carousel">
+					<div class="carousel-indicators">
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+					</div>
+					<div class="carousel-inner">
+					    <div class="carousel-item active">
+					      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+					    </div>
+					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+					    <span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+					    <span class="visually-hidden">Next</span>
+					</button>
+				</div>
 			</div>
-			<div id="carouselExampleIndicators" class="carousel slide mx-auto" data-bs-ride="carousel">
-						  <div class="carousel-indicators">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="portfolio__navproductos m-3">
+			<div class="portfolio__nombre m-3">
+				<h2>Diseño de Productos</h2>
+			</div>
+			<div class="row">
+				<div id="carouselExampleIndicators" class="carousel slide col-lg-7 mr-auto" data-bs-ride="carousel">
+				    <div class="carousel-indicators">
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+				    </div>
+				 	<div class="carousel-inner">
+					    <div class="carousel-item active">
+					      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
+					    </div>
+				    </div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+				    </button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
+				</div>
+				<div class="portfolio__info col-lg-4 m-auto">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur.</p>	
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="portfolio__navinteriores m-3">
+			<div class="portfolio__nombre m-3">
+				<h2>Diseño de Interiores</h2>
+			</div>
+			<div class="row">
+				<div class="portfolio__info col-lg-4 m-auto">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur.</p>
+				</div>
+				<div id="carouselExampleIndicators" class="carousel slide col-lg-7 ms-auto" data-bs-ride="carousel">
+					<div class="carousel-indicators">
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+					    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+					</div>
+					<div class="carousel-inner">
+					    <div class="carousel-item active">
+					      <img src="..//imagenes/F7.jpg" class="d-block w-100">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="..//imagenes/F7.jpg" class="d-block w-100">
+					    </div>
+					    <div class="carousel-item">
+					      <img src="..//imagenes/F7.jpg" class="d-block w-100">
+					    </div>
+					</div>
+					<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Previous</span>
+					</button>
+					<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
+						<span class="visually-hidden">Next</span>
+					</button>
+				</div>
+			</div>	  
+		</div>
+	</div>
+
+	<div class="row">
+			<div class="portfolio__navgrafico m-3">
+				<div class="portfolio__nombre m-3">
+					<h2>Diseño Gráfico</h2>
+				</div>
+
+				<div class="row">
+					<div id="carouselExampleIndicators" class="carousel slide col-lg-7 ms-auto" data-bs-ride="carousel">
+						<div class="carousel-indicators">
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
 						    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-						  </div>
-						  <div class="carousel-inner">
+						</div>
+						<div class="carousel-inner">
 						    <div class="carousel-item active">
-						      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+						      <img src="..//imagenes/WhatsApp.jpeg" class="d-block w-100">
 						    </div>
 						    <div class="carousel-item">
-						      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+						      <img src="..//imagenes/WhatsApp.jpeg" class="d-block w-100">
 						    </div>
 						    <div class="carousel-item">
-						      <img src="..//imagenes/render1.jpg" class="d-block w-100">
+						      <img src="..//imagenes/WhatsApp.jpeg" class="d-block w-100">
 						    </div>
-						  </div>
-						  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-						    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						    <span class="visually-hidden">Previous</span>
-						  </button>
-						  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-						    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-						    <span class="visually-hidden">Next</span>
-						  </button>
-			</div>
-		</div>
-
-		<div class="portfolio__navproductos">
-			<div class="portfolio__nombre">
-				<h2>Diseño de Productos</h2>
-			</div>
-			<div class="portfolio__info">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur.</p>
-			</div>
-			<div id="carouselExampleIndicators" class="carousel slide mx-auto" data-bs-ride="carousel">
-			  <div class="carousel-indicators">
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-			    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-			  </div>
-			 	<div class="carousel-inner">
-				    <div class="carousel-item active">
-				      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
-				    </div>
-				    <div class="carousel-item">
-				      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
-				    </div>
-				    <div class="carousel-item">
-				      <img src="..//imagenes/RENDERENCENDEDOR.854.jpg" class="d-block w-100">
-				    </div>
-			  </div>
-				  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				    <span class="visually-hidden">Previous</span>
-				  </button>
-				  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-				    <span class="visually-hidden">Next</span>
-				  </button>
-			</div>
-		</div>
-
-		<div class="portfolio__navinteriores">
-			<div class="portfolio__nombre">
-				<h2>Diseño de Interiores</h2>
-			</div>
-			<div class="portfolio__info">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur.</p>
-			</div>
-			<div id="carouselExampleIndicators" class="carousel slide mx-auto" data-bs-ride="carousel">
-				<div class="carousel-indicators">
-				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-				</div>
-				<div class="carousel-inner">
-				    <div class="carousel-item active">
-				      <img src="..//imagenes/F7.jpg" class="d-block w-100">
-				    </div>
-				    <div class="carousel-item">
-				      <img src="..//imagenes/F7.jpg" class="d-block w-100">
-				    </div>
-				    <div class="carousel-item">
-				      <img src="..//imagenes/F7.jpg" class="d-block w-100">
-				    </div>
-				</div>
-				  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-				    <span class="visually-hidden">Previous</span>
-				  </button>
-				  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-				    <span class="visually-hidden">Next</span>
-				  </button>
-			</div>
-		</div>
-
-		<div class="portfolio__navgrafico">
-			<div class="portfolio__nombre">
-				<h2>Diseño Gráfico</h2>
-			</div>
-			<div class="portfolio__info">
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-				cillum dolore eu fugiat nulla pariatur.</p>
-			</div>
-			<div id="carouselExampleIndicators" class="carousel slideRENDERENCENDEDOR.854.jpg mx-auto" data-bs-ride="carousel">
-				<div class="carousel-indicators">
-				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-				    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-				</div>
-				<div class="carousel-inner">
-				    <div class="carousel-item active">
-				      <img src="..//imagenes/Screenshot1.jpg" class="d-block w-100">
-				    </div>
-				    <div class="carousel-item">
-				      <img src="..//imagenes/Screenshot1.jpg" class="d-block w-100">
-				    </div>
-				    <div class="carousel-item">
-				      <img src="..//imagenes/Screenshot1.jpg" class="d-block w-100">
-				    </div>
-				</div>
-					  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-					    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					    <span class="visually-hidden">Previous</span>
-					  </button>
-					  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-					    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-					    <span class="visually-hidden">Next</span>
-					  </button>
+						</div>
+							  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+							    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							    <span class="visually-hidden">Previous</span>
+							  </button>
+							  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+							    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							    <span class="visually-hidden">Next</span>
+							  </button>
+						</div>
+						<div class="portfolio__info col-lg-4 m-auto">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+							tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+							quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+							consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+							cillum dolore eu fugiat nulla pariatur.</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
