--- a/paginas/quienes-somos.html
+++ b/paginas/quienes-somos.html
@@ -42,12 +42,12 @@
 
 		<div class="row text-center justify-content-center">
 			<div class="quienessomos col-lg-8 col-sm-10">
-				<div class="quienessomos__titulo blockquote">
+				<div class="quienessomos__titulo blockquote m-5">
 					<h1>Quienes somos</h1>
 				</div>
 		</div>
 
-		<div class="row justify-content-center">
+		<div class="row justify-content-center m-3">
 			<div class="quienessomos__texto text-center col-lg-8 col-sm-10">
 				<p class="blockquote">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -60,11 +60,11 @@
 		</div>
 
 		<div class="row justify-content-center">
-			<div class="quienessomos__profilecontainer1 col-lg-8 col-sm-10">
+			<div class="quienessomos__profilecontainer1 col-lg-8 col-sm-10 m-5">
 				<div class="quienessomos__profileimg text-center">
 					<img class="animate__animated animate__backInLeft" width="250px" src="..//imagenes/jjj.jpg">
 				</div>
-				<div class="quienessomos__profiletext text-center">
+				<div class="quienessomos__profiletext text-center m-3">
 					<h2>Juan Cruz Ottonelli</h2>
 					<h3>Diseñador Industrial - Buenos Aires - 22 años</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -76,11 +76,11 @@
 		</div>
 
 		<div class="row justify-content-center">
-			<div class="quienessomos__profilecontainer2 col-lg-8 col-sm-10">
+			<div class="quienessomos__profilecontainer2 col-lg-8 col-sm-10 m-5">
 				<div class="quienessomos__profileimg text-center">
 					<img class="animate__animated animate__backInLeft" width="250px" src="..//imagenes/jjj.jpg">
 				</div>
-				<div class="quienessomos__profiletext text-center">
+				<div class="quienessomos__profiletext text-center m-3">
 					<h2 >Octavio Cordeyro Equiza</h2>
 					<h3>Diseñador Industrial - Buenos Aires - 22 años</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
