--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -41,13 +41,10 @@
 
 	    <div class="row justify-content-center text-center">
 			<div class="serviciosmain  col-lg-8 col-sm-10">
-				<h1 class="servicios__titulo">Servicios</h1>
+				<h1 class="servicios__titulo m-5">Servicios</h1>
 
-				<div class="servicios__texto">
-					<p>Hace click y descubri que ofrecemos en cada uno de nuestros servicios.</p>
-				</div>
 
-					<div class="servicios__navstand">
+					<div class="servicios__navstand m-5">
 						<div class="servicios__nombre">
 							<h2>Diseño de Stands</h2>
 						</div>
@@ -60,7 +57,7 @@
 						</div>
 					</div>
 
-					<div class="servicios__navproductos">
+					<div class="servicios__navproductos m-5">
 						<div class="servicios__nombre">
 							<h2>Diseño de Productos</h2>
 						</div>
@@ -73,7 +70,7 @@
 						</div>
 					</div>
 
-					<div class="servicios__navinteriores">
+					<div class="servicios__navinteriores m-5">
 						<div class="servicios__nombre">
 							<h2>Diseño de Interiores</h2>
 						</div>
@@ -86,7 +83,7 @@
 						</div>
 					</div>
 
-					<div class="servicios__navgrafico">
+					<div class="servicios__navgrafico m-5">
 						<div class="servicios__nombre">
 							<h2>Diseño Gráfico</h2>
 						</div>
